<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="fr.codevallee.formation.android_tp7b.AnswerActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="46dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_weight="1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Résultat question"
        android:textSize="42dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#DDD"
        />

    <TextView
        android:id="@+id/goodAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goodAnswer"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_weight="3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_weight="1"/>

</LinearLayout>
